--- a/yesPage.html
+++ b/yesPage.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="yesStyle.css">
 </head>
 <body>
-    <audio src="angbalikatatbaywang.mp3" autoplay loop> </audio>
+    <audio controls autoplay loop> <source src="angbalikatatbaywang.mp3" type="audio/mpeg"/> your browser kineme </audio>    
     <div class="container">
         <h1 class="header_text">Knew you would say yes!</h1>
         <div class="gif_container">
